# mobi-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  license  readme.md
.github/workflows/: build.yml  fuzz.yml  rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: mobi_new.rs
src/: book.rs  display.rs  exth.rs  header.rs  huff.rs  lib.rs  lz77.rs  main.rs  mobih.rs  palmdoch.rs  reader.rs  record.rs  utils.rs  writer.rs
src/compression/: huff.md  huff.rs  mod.rs
src/headers/: exth.rs  header.rs  mobih.rs  mod.rs  palmdoch.rs  records.rs
tests/: book.rs  exth.rs  header.rs  mobih.rs  palmdoch.rs  tests.rs
