[package]
name = "mobi"
version = "0.4.0"
authors = ["wojciechkepka <wojciech@wkepka.dev>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/wojciechkepka/mobi-rs"
keywords = ["mobi", "ebook", "library", "e-book", "format"]
readme = "README.md"
categories = ["parsing"]
description = "A library for handling .mobi format files"

[features]
default = []
fmt = []
time = ["chrono"]

[lib]
name = "mobi"

[dependencies]
byteorder = "1.3.2"
chrono = { version = "0.4", optional = true }
encoding = "0.2.0"
